// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete when no properties are set matches snapshot 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value
    >
    <div role="button"
         style="display: none;"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style="display: none;"
       class="tm-autocomplete-results"
  >
  </div>
</div>
`;

exports[`Autocomplete when properties are set #onDocClick() does nothing when click comes from ana element of Autocomplete. 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input tm-focus">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style
       class="tm-autocomplete-results"
  >
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        qux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        quux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        corge
      </li>
    </ul>
    <hr>
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        bar
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set #onDocClick() hide the list and removes the focus. 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input tm-focus">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style="display: none;"
       class="tm-autocomplete-results"
  >
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        qux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        quux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        corge
      </li>
    </ul>
    <hr>
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        bar
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style="display: none;"
       class="tm-autocomplete-results"
  >
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        qux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        quux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        corge
      </li>
    </ul>
    <hr>
    my_foo_title
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        bar
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot showing list 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input tm-focus">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style
       class="tm-autocomplete-results"
  >
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        qux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        quux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        corge
      </li>
    </ul>
    <hr>
    my_foo_title
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        bar
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot without defaultItems 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input tm-focus">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style
       class="tm-autocomplete-results"
  >
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        qux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        quux
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        corge
      </li>
    </ul>
    my_foo_title
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot without items 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input tm-focus">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style
       class="tm-autocomplete-results"
  >
    my_foo_title
    <ul role="menu"
        class="tm-list"
    >
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        bar
      </li>
      <li class="tm-list-item"
          role="menuitem"
          tabindex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot without items and defaultItems 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input tm-focus">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style="display: none;"
       class="tm-autocomplete-results"
  >
    my_foo_title
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot without items and defaultItems using defaultProps 1`] = `
<div class="tm-autocomplete">
  <div class="tm-search-input tm-focus">
    <input type="text"
           tabindex="0"
           placeholder
           title
           value="fooval"
    >
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-clear"
         title
         aria-label
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
    </div>
    <div role="button"
         tabindex="0"
         class="tm-button tm-bt-search"
         title
         aria-label
    >
      submit
    </div>
  </div>
  <div style="display: none;"
       class="tm-autocomplete-results"
  >
  </div>
</div>
`;
